--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,21 @@
-    [build]
-      command = "npm run build"
-      publish = ".next"
+[build]
+  command = "npm run build"
+  publish = ".next"
 
-    [functions]
-      directory = "netlify/functions"
-      # Puedes descomentar la siguiente línea si tienes problemas con la compilación de funciones TypeScript
-      # node_bundler = "esbuild"
-    
+# Si usas el plugin @netlify/plugin-nextjs no necesitas los redirects manuales,
+# pero si tienes problemas de rutas, puedes descomentar y adaptar los siguientes:
+
+# [[redirects]]
+#   from = "/api/*"
+#   to = "/.netlify/functions/next_api_handler/:splat"
+#   status = 200
+
+# [[redirects]]
+#   from = "/_next/image"
+#   to = "/.netlify/functions/next_image_handler"
+#   status = 200
+
+# [[redirects]]
+#   from = "/*"
+#   to = "/.netlify/functions/next_handler"
+#   status = 200
