--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "@netlify/functions": "^2.6.0",
         "bcrypt": "^5.1.1",
         "jsonwebtoken": "^9.0.2",
-        "jwt-decode": "^3.1.2", // ¡Asegúrate de que esta línea esté aquí!
+        "jwt-decode": "^3.1.2",
         "next": "14.2.30",
         "pg": "^8.11.5",
         "pusher": "^5.2.0",
@@ -22,7 +22,7 @@
       "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/jsonwebtoken": "^9.0.6",
-        "@types/jwt-decode": "^3.1.0", // ¡Y esta línea aquí!
+        "@types/jwt-decode": "^3.1.0",
         "@types/node": "^20",
         "@types/pg": "^8.11.4",
         "@types/react": "^18",
