--- a/netlify.toml
+++ b/netlify.toml
@@ -2,20 +2,20 @@
   command = "npm run build"
   publish = ".next"
 
-# Si usas el plugin @netlify/plugin-nextjs no necesitas los redirects manuales,
-# pero si tienes problemas de rutas, puedes descomentar y adaptar los siguientes:
+# Configuración para Next.js con rutas API
+# Estas redirecciones son cruciales para que Netlify dirija las peticiones /api/*
+# a las funciones Lambda generadas por Next.js.
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/next_api_handler/:splat"
+  status = 200
 
-# [[redirects]]
-#   from = "/api/*"
-#   to = "/.netlify/functions/next_api_handler/:splat"
-#   status = 200
+[[redirects]]
+  from = "/_next/image"
+  to = "/.netlify/functions/next_image_handler"
+  status = 200
 
-# [[redirects]]
-#   from = "/_next/image"
-#   to = "/.netlify/functions/next_image_handler"
-#   status = 200
-
-# [[redirects]]
-#   from = "/*"
-#   to = "/.netlify/functions/next_handler"
-#   status = 200
+[[redirects]]
+  from = "/*"
+  to = "/.netlify/functions/next_handler"
+  status = 200
