--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "jsonwebtoken": "^9.0.2",
         "jwt-decode": "^3.1.2",
         "next": "14.2.30",
+        "next-auth": "^4.24.7",
         "pg": "^8.11.5",
         "pusher": "^5.2.0",
         "react": "^18",
@@ -27,6 +28,7 @@
         "@types/pg": "^8.11.4",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/next-auth": "^3.15.0",
         "eslint": "^8",
         "eslint-config-next": "14.2.30",
         "postcss": "^8",
@@ -34,4 +36,3 @@
         "typescript": "^5"
       }
     }
-    
